Moving to snakeyaml (#1)
* Adjustments for snakeyaml

* Adding JavaDocs.

* worked on SonarCloud remarks.

* Fix tests

* Enable test coverage reporting.

* test reports fixed.